<resources>
    <string name="app_name">Timetric</string>
    <string name="helpText">\n\nChoose an activity and start a new session\n\n</string>
    <string name="createNew">Create New Activity</string>
    <string name="startNew">Start</string>
    <string name="study">Study</string>
    <string name="exercise">Exercise</string>
    <string name="typeSpinnerLabel">Select Activity Type</string>
    <string name="scopeSpinnerLabel">Select Scope</string>
    <string name="clearData">Clear Data</string>
    <string name="stats">Statistics</string>
    <string name="dataClearedSucessfully">Data has been cleared!</string>
    <string name="startsession">Start Session</string>
    <string name="endsession">End Session</string>
    <string name="testData">Add test data</string>
    <string name="testDataInserted">Previous data has been cleared. Test data has been inserted!</string>
    <string name="fact_one">Study Tip: The recommended length of break is 10 minutes per 50 minutes of study!</string>
    <string name="fact_two">Study Tip: The brain is most effective between the hours of 10am-2pm and 4pm-10pm!</string>
    <string name="fact_three">Study Tip: It is recommended to do 14 hours of study per subject per week!</string>
    <string name="fact_four">Health Tip: It is recommended to get 2.5 hours of moderate exercise or 1.25 hours of vigorous exercise per week!</string>
    <string name="fact_five">Health Tip: Ages 18yrs-25yrs need 7hrs-9hrs of sleep!</string>
    <string name="fact_six">Health Tip: It is beneficial to do 20 minutes of meditation per day!</string>
    <string name="fact_seven">Study Tip: Regularly test yourself on knowledge with questions (flash cards can help with this)!</string>
    <string name="fact_eight">Study Tip: Following a study routine makes for more effective study!</string>

    <string-array name="SessionTypes">
        <item>Study</item>
        <item>Exercise</item>
        <item>Chores</item>
    </string-array>

    <string-array name="ScopeTypes">
        <item>Month View</item>
        <item>Year View</item>
    </string-array>

    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="title_activity_facts_page">ScrollingActivity</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>