<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/statsConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StatsMenuActivity">

    <com.jjoe64.graphview.GraphView
        android:id="@+id/idGraphView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="40dp"
        android:background="@color/CT_DarkPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idGraphView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/typeSpinnerLabel"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@id/view"
        tools:layout_editor_absoluteX="135dp" />

    <Spinner
        android:id="@+id/sessionTypeSelector"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="50dp"
        android:background="@color/CT_Primary"
        android:entries="@array/SessionTypes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/scopeSpinnerLabel"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/sessionTypeSelector"
        tools:layout_editor_absoluteX="155dp" />

    <Spinner
        android:id="@+id/scopeSelector"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@color/CT_Primary"
        android:entries="@array/ScopeTypes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <!--
    <TextView
        android:id="@+id/fillerText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/stats"
        android:textSize="50sp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    -->

</androidx.constraintlayout.widget.ConstraintLayout>