<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/timeConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFF4EF"
    tools:context=".TimeActivity">

    <FrameLayout
        android:id="@+id/frameTimeActivity"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_weight="1"
        android:background="#EFF4EF"
        app:layout_constraintBottom_toTopOf="@id/timeText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/mascotTimeActivity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:padding="80dp"
            app:srcCompat="@drawable/blockythree"
            tools:srcCompat="@drawable/blockythree" />

    </FrameLayout>

    <TextView
        android:id="@+id/timeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/helpText"
        android:textColor="#0B0A0A"
        android:textColorHint="#121111"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/frameTimeActivity" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:background="@color/CT_DarkPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timeText"
        app:layout_constraintVertical_bias="1.0" />

    <Spinner
        android:id="@+id/sessionSpinner"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="50dp"
        android:layout_weight="0"
        android:background="@color/CT_Primary"
        android:clickable="false"
        android:entries="@array/SessionTypes"
        android:gravity="center"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <Button
        android:id="@+id/studybtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_weight="0"
        android:gravity="center"
        android:text="Start Session"
        android:textColor="@color/CT_PrimaryText"
        app:backgroundTint="@color/CT_Button"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sessionSpinner" />

</androidx.constraintlayout.widget.ConstraintLayout>