<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/clearData"
        android:title="@string/clearData"
        app:showAsAction="never" />
    <item
        android:id="@+id/testData"
        android:title="@string/testData" />
    <item
        android:id="@+id/facts_page_id"
        android:title="Facts page" />
    <item
        android:id="@+id/statisticsMenu"
        android:icon="@drawable/ic_statistics"
        android:title="@string/stats"
        app:showAsAction="always" />
</menu>